# NxNandManager

./: .gitignore
.github/workflows/: build.yml
NxNandManager/: CMakeLists.txt  NxNandManager.sln  NxNandManager.vcxproj  NxStorage.cpp  main.cpp
NxNandManager-old/: CMakeUserPresets.json
NxNandManager/gui/: NxNandManager.pro
